--- a/opdracht1/styles/style.css
+++ b/opdracht1/styles/style.css
@@ -43,12 +43,18 @@ summary {
 :root {
     --color-kodak-rood: #e30613;
     --color-kodak-geel: #fab617;
+    --color-kodak-zwart: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         --color-kodak-rood: #ffffff;
-        --color-kodak-geel: #000000;
+        --color-kodak-geel: #fab617;
+        --color-kodak-zwart: #000000;
+    }
+
+    body span {
+        color: var(--color-kodak-zwart) !important;
     }
 }
 
@@ -61,12 +67,59 @@ summary {
 /****************/
 body {
     font-family: Nobile, sans-serif;
-    background-color: var(--color-kodak-geel);
+    background-color: var(--color-kodak-zwart);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
+}
+
+div::after {
+    content: "";
+    position: absolute;
+    width: 200vw;
+    height: 200vh;
+    left: -50%;
+    top: -50%;
+    background-image: url(../images/grain.png);
+    opacity: 0%;
+    z-index: -1;
+    animation: grain 0.4s steps(8) infinite;
+    transition: 0.2s all ease-in-out;
+}
+
+body h1:hover ~ div::after { 
+opacity: 10%; 
+}
+
+@keyframes grain {
+
+    0%,
+    100% {
+        transform: translate(0, 0);
+    }
+
+    10% {
+        transform: translate(-5%, -10%);
+    }
+
+    30% {
+        transform: translate(3%, -15%);
+    }
+
+    50% {
+        transform: translate(12%, 9%);
+    }
+
+    70% {
+        transform: translate(9%, 4%);
+    }
+
+    90% {
+        transform: translate(-1%, 7%);
+    }
 }
 
 /* jouw code */
@@ -87,162 +140,202 @@ body h1:hover {
 
     0% {
         opacity: 100%;
+        transform: translateX(0px);
     }
 
     2.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     5% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     7.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     10% {
         opacity: 40%;
+        transform: translateX(0px);
     }
 
     12.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     15% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     17.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     20% {
         opacity: 40%;
+        transform: translateX(0px);
     }
 
     22.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     25% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     27.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     30% {
         opacity: 40%;
+        transform: translateX(0px);
     }
 
     32.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     35% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     37.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     40% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     42.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     45% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     47.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     50% {
         opacity: 40%;
+        transform: translateX(0px);
     }
 
     52.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     55% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     57.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     60% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     62.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     65% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     67.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     70% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     72.5% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     75% {
         opacity: 40%;
+        transform: translateX(0px);
     }
 
     80% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     82.5% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     85% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     87.5% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     90% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     92.5% {
         opacity: 80%;
+        transform: translateX(0px);
     }
 
     95% {
         opacity: 100%;
+        transform: translateX(1px);
     }
 
     97.5% {
         opacity: 60%;
+        transform: translateX(0px);
     }
 
     100% {
         opacity: 100%;
+        transform: translateX(0px) translateY(0px) skew(0deg);
     }
 }
 
@@ -272,29 +365,35 @@ body span {
     color: var(--color-kodak-geel);
     font-size: 25px;
     position: absolute;
-    animation: letters 2s ease-in-out infinite;
+    animation: letters 0.4s infinite;
     animation-play-state: paused;
 }
 
 @keyframes letters {
 
-    0% {}
+    0% {
+        transform: translateX(0px)
+    }
 
     25% {
-        transform: translateX(10px) translateY(-1px) skew(2deg);
+        transform: translateX(1px) skew(1deg);
     }
 
     50% {
-        transform: translateX(-10px) translateY(0px) skew(0deg);
+        transform: translateX(0px) skew(0deg);
     }
 
     75% {
-        transform: translateX(10px) translateY(1px) skew(-2deg);
+        transform: translateX(1px) skew(-1deg);
     }
 
-    100% {}
+    100% {
+        transform: translateX(0px)
+    }
 
 }
+
+
 
 body span:nth-of-type(1) {
     top: 39%;
@@ -322,6 +421,6 @@ body span:nth-of-type(4) {
 
 body span:nth-of-type(5) {
     top: 39%;
-    left: 79%;
+    left: 80%;
     z-index: 1;
 }
